--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ termcolor==2.5.0
 threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.1
+torch==2.0.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
