--- a/requirements.txt
+++ b/requirements.txt
@@ -93,6 +93,8 @@ threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.1
 torch==2.0.1
+tqdm==4.64.1
+
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
