--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ Pygments==2.18.0
 pymdown-extensions==10.11.2
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+pytorch-lightning==2.3.3
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
